--- a/index.html
+++ b/index.html
@@ -569,6 +569,13 @@
           </div>
         </div>
       </footer>
+
+      <div class="backdrop">
+        <div class="modal">
+          <button type="button" class="modal-close-btn"></button>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
