--- a/portfolio.html
+++ b/portfolio.html
@@ -67,12 +67,19 @@
           <ul class="icons">
             <li class="icons-item">
               <a href="" class="review link">
-                <img
-                  src="./images/portfolio/banking-app.jpg"
-                  alt="photo-banking-app"
-                  width="360"
-                  height="300"
-                />
+                <div class="review-img">
+                  <img
+                    src="./images/portfolio/banking-app.jpg"
+                    alt="photo-banking-app"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="app-name">
                   <h2 class="icons-description">Banking App Interface Concept</h2>
                   <p class="icons-type">App</p>
@@ -82,12 +89,18 @@
 
             <li class="icons-item">
               <a href="" class="review link">
-                <img
-                  src="./images/portfolio/cashless-payment.jpg"
-                  alt="photo-cashless-payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="review-img">
+                  <img
+                    src="./images/portfolio/cashless-payment.jpg"
+                    alt="photo-cashless-payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="app-name">
                   <h2 class="icons-description">Cashless Payment</h2>
                   <p class="icons-type">Marketing</p>
@@ -97,12 +110,18 @@
 
             <li class="icons-item">
               <a href="" class="review link">
-                <img
-                  src="./images/portfolio/meditation-app.jpg"
-                  alt="photo-meditation-app"
-                  width="360"
-                  height="300"
-                />
+                <div class="review-img">
+                  <img
+                    src="./images/portfolio/meditation-app.jpg"
+                    alt="photo-meditation-app"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="app-name">
                   <h2 class="icons-description">Meditation App</h2>
                   <p class="icons-type">App</p>
@@ -111,13 +130,19 @@
             </li>
 
             <li class="icons-item">
-              <a href="" class="review link"
-                ><img
-                  src="./images/portfolio/taxi-service.jpg"
-                  alt="photo-taxi-service"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="review link">
+                <div class="review-img">
+                  <img
+                    src="./images/portfolio/taxi-service.jpg"
+                    alt="photo-taxi-service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="app-name">
                   <h2 class="icons-description">Taxi Service</h2>
                   <p class="icons-type">Marketing</p>
@@ -127,12 +152,18 @@
 
             <li class="icons-item">
               <a href="" class="review link">
-                <img
-                  src="./images/portfolio/screen-illustations.jpg"
-                  alt="photo-screen-illustations"
-                  width="360"
-                  height="300"
-                />
+                <div class="review-img">
+                  <img
+                    src="./images/portfolio/screen-illustations.jpg"
+                    alt="photo-screen-illustations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="app-name">
                   <h2 class="icons-description">Screen Illustrations</h2>
                   <p class="icons-type">Design</p>
@@ -141,14 +172,20 @@
             </li>
 
             <li class="icons-item">
-              <a href="" class="review link"
-                ><img
+              <a href="" class="review link">
+                <div class="review-img">
+                  <img
                   src="./images/portfolio/online-courses.jpg"
                   alt="photo-online-courses"
                   width="360"
                   height="300"
                 />
-                <div class="app-name">
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+                                <div class="app-name">
                   <h2 class="icons-description">Online Courses</h2>
                   <p class="icons-type">Marketing</p>
                 </div>
@@ -157,13 +194,19 @@
 
             <li class="icons-item">
               <a href="" class="review link">
-                <img
+                <div class="review-img">
+                  <img
                   src="./images/portfolio/instagram-stories.jpg"
                   alt="photo-instagram-stories"
                   width="360"
                   height="300"
                 />
-                <div class="app-name">
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+                                <div class="app-name">
                   <h2 class="icons-description">Instagram Stories Concept</h2>
                   <p class="icons-type">Design</p>
                 </div>
@@ -172,12 +215,18 @@
 
             <li class="icons-item">
               <a href="" class="review link">
-                <img
+                <div class="review-img">
+                  <img
                   src="./images/portfolio/organic-food.jpg"
                   alt="photo-organic-food"
                   width="360"
                   height="300"
                 />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="app-name">
                   <h2 class="icons-description">Organic Food</h2>
                   <p class="icons-type">Web Site</p>
@@ -187,13 +236,19 @@
 
             <li class="icons-item">
               <a href="" class="review link">
-                <img
+                <div class="review-img">
+                  <img
                   src="./images/portfolio/fresh-coffee.jpg"
                   alt="photo-fresh-coffee"
                   width="360"
                   height="300"
                 />
-                <div class="app-name">
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+                  <div class="app-name">
                   <h2 class="icons-description">Fresh Coffee</h2>
                   <p class="icons-type">Web Site</p>
                 </div>
