--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Studio</a>
+              <a class="menu-link link first-line" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -62,7 +62,7 @@
       <section class="main-information">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button class="modal-open-button" type="button">Order Service</button>
+          <button class="modal-open-button" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
 
@@ -570,12 +570,18 @@
         </div>
       </footer>
 
-      <div class="backdrop">
+      <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-          <button type="button" class="modal-close-btn"></button>
+          <button type="button" class="modal-close-btn" data-modal-close>
+            <svg class="modal-close-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
         </div>
       </div>
 
     </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
