--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
           <ul class="menu list">
             <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link link second-line" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
           </ul>
