--- a/index.html
+++ b/index.html
@@ -570,10 +570,10 @@
         </div>
       </footer>
 
-      <div class="backdrop is-hidden" data-modal>
+      <div data-modal class="backdrop is-hidden">
         <div class="modal">
-          <button type="button" class="modal-close-btn" data-modal-close>
-            <svg class="modal-close-icon" width="24" height="24">
+          <button type="button" data-modal-close class="modal-close-btn">
+            <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
