--- a/index.html
+++ b/index.html
@@ -570,16 +570,15 @@
         </div>
       </footer>
 
-      <div data-modal class="backdrop is-hidden">
+      <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-          <button type="button" data-modal-close class="modal-close-btn">
+          <button type="button" class="modal-close-btn" data-modal-close>
             <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+              <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
         </div>
       </div>
-
     </div>
 
     <script src="./js/modal.js"></script>
