--- a/index.html
+++ b/index.html
@@ -513,71 +513,81 @@
     </main>
 
     <!-- Підвал сторінки -->
+    <div class="common-footer-container">
+      <div class="footer-container">
+        <footer class="under-logo-and-slogan">
+          <div class="footer">
+            <div class="footer-logo-container">
+              <a class="footer-logo link" href="./portfolio.html">
+                Web <span class="description-first-word-under-logo">Studio</span></a
+              >
+              <p class="footer-description">
+                Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.
+              </p>
+            </div>
 
-    <div class="footer-container">
-      <footer class="under-logo-and-slogan">
-        <div class="footer">
-          <div class="footer-logo-container">
-            <a class="footer-logo link" href="./portfolio.html">
-              Web <span class="description-first-word-under-logo">Studio</span></a
-            >
-            <p class="footer-description">
-              Increase the flow of customers and sales for your business with digital marketing &
-              growth solutions.
-            </p>
+            <div class="social-media">
+              <p class="title-social-media">Social media</p>
+              <ul class="social-media-list list">
+                <li class="social-media-list-item">
+                  <a href="" class="social-media-list-link">
+                    <svg
+                      class="social-list-icon"
+                      aria-label="іконка інстаграм"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-media-list-item">
+                  <a href="" class="social-media-list-link">
+                    <svg class="social-list-icon" aria-label="іконка твітер" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+
+                <li class="social-media-list-item">
+                  <a href="" class="social-media-list-link">
+                    <svg
+                      class="social-list-icon"
+                      aria-label="іконка фейсбук"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-list-item">
+                  <a href="" class="social-media-list-link">
+                    <svg
+                      class="social-list-icon"
+                      aria-label="іконка лінкедін"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-
-          <div class="social-media">
-            <p class="title-social-media">Social media</p>
-            <ul class="social-media-list list">
-              <li class="social-media-list-item">
-                <a href="" class="social-media-list-link">
-                  <svg
-                    class="social-list-icon"
-                    aria-label="іконка інстаграм"
-                    width="24"
-                    height="24"
-                  >
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="social-media-list-item">
-                <a href="" class="social-media-list-link">
-                  <svg class="social-list-icon" aria-label="іконка твітер" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-
-              <li class="social-media-list-item">
-                <a href="" class="social-media-list-link">
-                  <svg class="social-list-icon" aria-label="іконка фейсбук" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-media-list-item">
-                <a href="" class="social-media-list-link">
-                  <svg class="social-list-icon" aria-label="іконка лінкедін" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+        </footer>
+      </div>
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button type="button" class="modal-close-btn" data-modal-close>
+            <svg class="modal-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
         </div>
-      </footer>
-     </div>
-
-     <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
       </div>
     </div>
 
